--- a/README.Rmd
+++ b/README.Rmd
@@ -16,14 +16,10 @@ knitr::opts_chunk$set(
 # SatRbedo
 
 <!-- badges: start -->
-[![licence](https://img.shields.io/badge/Licence-GPL--3-blue.svg)](https://www.r-project.org/Licenses/GPL-3)
-<!--[![Codecov test coverage](https://codecov.io/gh/pabl1t0x/SatRbedo/graph/badge.svg)](https://app.codecov.io/gh/pabl1t0x/SatRbedo)
-<!--[![R-CMD-check](https://github.com/pabl1t0x/SatRbedo/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/pabl1t0x/SatRbedo/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/pabl1t0x/SatRbedo/graph/badge.svg)](https://app.codecov.io/gh/pabl1t0x/SatRbedo)
 <!-- badges: end -->
 
-The `SatRbedo` package consists of a set of tools for retrieving snow and ice albedo from optical satellite imagery
-(e.g., [Landsat](https://www.usgs.gov/landsat-missions/landsat-collection-2-surface-reflectance) and
-[Sentinel-2](https://dataspace.copernicus.eu/explore-data/data-collections/sentinel-data/sentinel-2)). `SatRbedo` functions require the following datasets:
+The `SatRbedo` package consists of a set of tools for retrieving snow and ice albedo from optical satellite imagery (e.g., [Landsat](https://www.usgs.gov/landsat-missions/landsat-collection-2-surface-reflectance) and [Sentinel-2](https://dataspace.copernicus.eu/explore-data/data-collections/sentinel-data/sentinel-2)). `SatRbedo` functions require the following datasets:
 
 - Atmospherically corrected surface reflectance (gridded).
 - Satellite ($\varphi_v$, $\theta_v$) and solar ($\varphi_s$, $\theta_s$) azimuth and zenith angles (numeric or gridded).
@@ -42,7 +38,7 @@ The package includes tools for:
 
 ## Installation
 
-You can install the development version of SatRbedo from [GitHub](https://github.com/) with:
+You can install the development version of SatRbedo from [GitHub](https://github.com/pabl1t0x/SatRbedo) with:
 
 ``` r
 # install.packages("devtools")
@@ -51,9 +47,13 @@ devtools::install_github("pabl1t0x/SatRbedo")
 
 ## Getting Started
 
-Snow and ice albedo retrieval from satellite imagery is a three-step workflow that includes topographic and anisotropic corrections and a
-narrowband to broadband albedo conversion. The following example shows how to estimate albedo using satellite data from the Athabasca Glacier in
-Canada on 11 September 2020.
+Snow and ice albedo retrieval from satellite imagery is a four-step workflow that includes image pre-processing, topographic and anisotropic corrections, and a narrow-to-broadband albedo conversion (Fig. 1).
+
+``` {r workflow, echo = FALSE, fig.cap = "Fig. 1 Flowchart of the satellite albedo retrieval workflow"}
+knitr::include_graphics("inst/paper/workflow.png")
+```
+
+The following example shows how to estimate albedo using surface reflectance data from five spectral bands at the Athabasca Glacier in Canada on 11 September 2020.
 
 **Step 1: Load the data for the area of interest**
 
@@ -81,7 +81,7 @@ outline <- system.file("extdata/athabasca_outline.shp", package = "SatRbedo")
 
 ```{r example-preprocessing}
 # Transform the input data to SpatRaster and crop to the area of interest
-dem <- rast(dem)
+dem <- terra::rast(dem)
 blue <- preproc(grd = blue_SR, outline = outline)
 green <- preproc(grd = green_SR, outline = outline)
 red <- preproc(grd = red_SR, outline = outline)
@@ -105,19 +105,37 @@ swir2 <- topo_corr(swir2, dem, SAA, SZA)
 
 **Step 4: Estimation of broadband albedo after anisotropic correction**
 
-```{r example-anisotropy, fig.dim = c(5, 5), fig.cap = "Broadband albedo"}
+```{r example-anisotropy, fig.dim = c(5, 5), fig.cap = "Fig. 2 Broadband albedo"}
 SAA <- 164.8 # solar azimuth angle
 SZA <- 48.9 # solar zenith angle
 VAA <- 90.9 # view azimuth angle
 VZA <- 5.2 # view zenith angle
+slope <- terra::terrain(dem, v = "slope", neighbors = 4, unit = "degrees")
+aspect <- terra::terrain(dem, v = "aspect", neighbors = 4, unit = "degrees")
 threshold <- snow_or_ice(green$bands[[2]], nir$bands[[2]])$th # threshold used to discriminate between snow and ice
-broadband_albedo <- albedo_sat(SAA, SZA, VAA, VZA,
-  method = "fivebands", blue = blue$bands[[2]], green = green$bands[[2]],
-  red = red$bands[[2]], NIR = nir$bands[[2]], SWIR1 = swir1$bands[[2]],
-  SWIR2 = swir2$bands[[2]], th = threshold
+broadband_albedo <- albedo_sat(
+  SAA, SZA, VAA, VZA,
+  slope, aspect, method = "fivebands",
+  blue = blue$bands[[2]], green = green$bands[[2]], red = red$bands[[2]],
+  NIR = nir$bands[[2]], SWIR1 = swir1$bands[[2]], SWIR2 = swir2$bands[[2]],
+  th = threshold
 )
 # Plot the results
 plot(broadband_albedo[[6]])
+```
+
+## Citing
+
+Please cite `SatRbedo` using:
+
+```
+@Manual{,
+  title = {SatRbedo: An R package for retrieving snow and ice albedo from optical satellite imagery},
+  author = {Pablo Fuchs and Ruzica Dadic and Shelley MacDonell and Heather Purdie and Brian Anderson and Marwan Katurji},
+  year = {2025},
+  note = {R package version 1.0},
+  url = {https://github.com/pabl1t0x/SatRbedo},
+}
 ```
 
 ## License
