Updated example files

--- a/vignettes/albedo_retrieval_landsat.Rmd
+++ b/vignettes/albedo_retrieval_landsat.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "albedo_retrieval_landsat"
+title: "Retrieving snow and ice albedo from Landsat data"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{albedo_retrieval_landsat}
+  %\VignetteIndexEntry{Retrieving snow and ice albedo from Landsat data}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -14,6 +14,18 @@ knitr::opts_chunk$set(
 )
 ```
 
+This vignette shows how to use Landsat surface reflectance, topographic data, and glacier outlines to retrieve snow and ice albedo at the Athabasca Glacier in Canada. We provide the input datasets for 11 September 2020 and guide the user through the processing steps implemented in `SatRbedo`. It is assumed that users have basic knowledge of geographic information systems, satellite remote sensing, and accessing Earth Observation data.
+
+## Input data
+
+Landsat surface reflectance and topographic data for the area of interest can be downloaded from the USGS [EarthExplorer](https://earthexplorer.usgs.gov/). Glacier outlines are available at the [GLIMS](https://www.glims.org/) website.
+
+After downloading the required input data, the grid and shapefiles can be reprojected to a common coordinate system and resampled to the same spatial resolution. Finally, they are cropped to the extent of the area of interest. The `preproc()` function and the `{terra}` package can be used to perform these tasks.
+
 ```{r setup}
 library(SatRbedo)
 ```
+
+This workflow can be applied tor other instruments and sensors, by specifying the spectral bands in the functions.
+
+
